@@ -1,6 +1,6 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.654 2006/06/17 15:41:25 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.655 2006/06/17 18:22:44 codeman Exp $
 
   17 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIUtility.py:
@@ -11,6 +11,7 @@
   look for mtas and if it finds it emerge it.
   Initial attempt at moving extra_packages early in the setup to only show
   local USE flags relating to those packages.
+  .. abandoned local USE project.  no right way to do it.
 
   9 Jun 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIUtility.py:
